# Broswer-hybrid-llm-All-in-one-platform

./: .env.example  .gitignore  BUILD_REQUIREMENTS.md  Cargo.toml  FEDORA_43_BUILD.md  FEDORA_43_INSTALL.md  FEDORA_43_REFACTOR.md  README.md  config.example.toml  index.html  package.json  tailwind.config.js  tsconfig.json
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: claude.rs  gemini.rs  lib.rs  openai.rs
crates/common/: Cargo.toml
crates/common/src/: errors.rs  lib.rs  messages.rs  traits.rs  types.rs
crates/context-manager/: Cargo.toml
crates/context-manager/src/: database.rs  embeddings.rs  lib.rs  memory.rs
crates/filesystem-interface/: Cargo.toml
crates/filesystem-interface/src/: lib.rs
crates/llama-cpp-provider/: Cargo.toml
crates/llama-cpp-provider/src/: lib.rs
crates/llm-pool/: Cargo.toml
crates/llm-pool/src/: lib.rs  load_balancer.rs  pool.rs
crates/sandbox-manager/: Cargo.toml
crates/sandbox-manager/src/: lib.rs
crates/security-engine/: Cargo.toml
crates/security-engine/src/: audit.rs  engine.rs  guardrails.rs  lib.rs  permissions.rs
docs/: ARCHITECTURE.md  SETUP.md
ghost_symphony/src/ghost_symphony/: gatekeeper.py  main.py  mock_system.py  network.py  sandbox.py
ghost_symphony/tests/: mock_tests.py  test_gatekeeper.py  test_gatekeeper_logic.py  test_main.py  test_mock_system.py  test_network.py  test_sandbox.py
orchestrator/: Cargo.toml
orchestrator/src/: main.rs  message_bus.rs  orchestrator.rs  router.rs
scripts/: setup_db.sh
scripts/sql/: 001_initial_schema.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  state.rs  websocket.rs
ui/: INTEGRATION.md  README.md
ui/src/: App.tsx
ui/src/components/: AuditLog.tsx  CodingCanvas.tsx  DocumentUpload.tsx  LLMManager.tsx  PermissionControl.tsx
ui/src/hooks/: useTauriAPI.ts  useWebSocket.ts
ui/src/pages/: Dashboard.tsx
ui/src/styles/: globals.css
ui/src/types/: api.ts  index.ts
