[workspace]
resolver = "2"
members = [
    "orchestrator",
    "crates/common",
    "crates/llm-pool",
    "crates/security-engine",
    "crates/sandbox-manager",
    "crates/filesystem-interface",
    "crates/api-gateway",
    "crates/context-manager",
    "crates/llama-cpp-provider",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hybrid LLM Platform Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Rekonquest/browser-privacy"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
pgvector = { version = "0.3" }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
