[package]
name = "hybrid-llm-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "1.5", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Our crates
common = { path = "../crates/common" }
llm-pool = { path = "../crates/llm-pool" }
security-engine = { path = "../crates/security-engine" }
context-manager = { path = "../crates/context-manager" }
filesystem-interface = { path = "../crates/filesystem-interface" }
api-gateway = { path = "../crates/api-gateway" }
sandbox-manager = { path = "../crates/sandbox-manager" }
llama-cpp-provider = { path = "../crates/llama-cpp-provider" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
