[package]
name = "hybrid-llm-tauri"
version = "0.1.0"
edition = "2021"

# This makes src-tauri a standalone package outside the main workspace
[workspace]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri v2 - Compatible with webkit2gtk-4.1 and libsoup-3 on Fedora 43
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tauri v2 plugins
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"

# Our crates
common = { path = "../crates/common" }
llm-pool = { path = "../crates/llm-pool" }
security-engine = { path = "../crates/security-engine" }
context-manager = { path = "../crates/context-manager" }
filesystem-interface = { path = "../crates/filesystem-interface" }
api-gateway = { path = "../crates/api-gateway" }
sandbox-manager = { path = "../crates/sandbox-manager" }
llama-cpp-provider = { path = "../crates/llama-cpp-provider" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

[features]
default = []
# Tauri v2 doesn't use custom-protocol feature the same way
